Binary_relations.html

--- a/Binary_relations.html
+++ b/Binary_relations.html
@@ -248,7 +248,7 @@
 </head>
 <body>
 
-    <h1>Лабораторія Бінарних Відношень</h1>
+    <h2>Види бінарних відношень</h2>
     <div class="subtitle">Побудуй граф і досліди його властивості</div>
 
     <div class="main-layout">
