Binary_relations.html

--- a/Binary_relations.html
+++ b/Binary_relations.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Симулятор Бінарних Відношень</title>
+    <title>Види Бінарних Відношень</title>
     
     <script type="text/javascript" src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
     
@@ -248,7 +248,7 @@
 </head>
 <body>
 
-    <h2>Види бінарних відношень</h2>
+    <h2>Бінарні відношеннкя</h2>
     <div class="subtitle">Побудуй граф і досліди його властивості</div>
 
     <div class="main-layout">
