--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         
         <button class="menu-btn" onclick="openSim('SetOperations.html', 'Операції над множинами', this)">Операції над множинами (кола Ейлера)</button>
         <button class="menu-btn" onclick="openSim('Cardinality_and_power-set.html', 'Потужність множин і булеан', this)">Потужність множин і булеан</button>
-        <button class="menu-btn" onclick="openSim('binari_relations.html', 'Бінарні відношення', this)">Бінарні відношення</button>
+        <button class="menu-btn" onclick="openSim('binari_relations.html', 'Бінарні відношення', this)">Відношення</button>
         <button class="menu-btn" onclick="openSim('Combinatorics.html', 'Комбінаторика (частина 1)', this)">Основні формули комбінаторики</button>
         <button class="menu-btn" onclick="openSim('Combinatorics2.html', 'Комбінаторика (частина 2)', this)">Комбінаторика-2</button>
 
@@ -284,3 +284,4 @@
 </body>
 
 </html>
+
