--- a/SetOperations.html
+++ b/SetOperations.html
@@ -507,7 +507,7 @@
                     descEl.innerText = "";
                 } else {
                     texEl.innerHTML = `?`;
-                    descEl.innerText = "Користувацька комбінація";
+                    descEl.innerText = "Це якась складна комбіація. Штучний інтелект не може з цим впоратися. Може спробуєте свій природни?😉 Виведіть формулу самі! (Насправді, для трьох множин, що перетинаються, існує 2^(2^3)=256 комбінацій. І це не враховуючи тотожньо рівних еквівалентів. Наприклад, B'\\A' еквівалентно A\\B";
                     texEl.style.color = "#777";
                 }
             }
