--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         <button class="menu-btn" onclick="openSim('DNA-assemblingWithGraphs.html', 'Збірка ДНК графами', this)">Прикладне застосування теорії графів: Збірка ДНК</button>
         <button class="menu-btn" onclick="openSim('graphNeuralNetwork.html', 'Графові нейромережі', this)">Вступ до Graph Neural Networks</button>
 
-        <div class="category">4. Кодування та кібербезпека</div>
+        <div class="category">4. Математичні основи кодування інформації та кібербезпеки</div>
         
         <div class="subcategory">Кодування інформації</div>
         <button class="menu-btn" onclick="openSim('Huffman_and_Shannon-Fano.html', 'Хаффман і Шеннон-Фано', this)">Коди Хаффмана і Шеннона-Фано</button>
@@ -221,13 +221,17 @@
         <button class="menu-btn" onclick="openSim('rANS.html', 'rANS кодування', this)">rANS кодування</button>
         <button class="menu-btn" onclick="openSim('convolution-codes.html', 'Згорткові коди', this)">Згорткові коди</button>
 
-        <div class="subcategory">Криптографія та безпека</div>
+        <div class="subcategory">Криптографія та кібербезпека</div>
         <button class="menu-btn" onclick="openSim('RSA.html', 'Шифрування RSA', this)">Алгоритм RSA</button>
         <button class="menu-btn" onclick="openSim('DH.html', 'Протокол Діффі-Хеллмана', this)">Обмін ключами (Діффі-Хеллман)</button>
           <button class="menu-btn" onclick="openSim('aes.html', ',Блочне симетричне шифрування AES', this)">Симетричне шифрування AES</button>
 		<button class="menu-btn" onclick="openSim('chacha20.html', 'Шифр ChaCha20', this)">Потоковий шифр ChaCha20</button>
         <button class="menu-btn" onclick="openSim('HashingARX.html', 'Хешування ARX', this)">Хешування (ARX конструкції)</button>
-
+ 
+			<div class="category">5. Вступ до цифрової обробки інформації</div>
+ 	 <button class="menu-btn" onclick="openSim('DCT.html', 'DCT', this)">Дискретне косинусне перетворення</button>
+ 
+		
         <div style="height: 50px;"></div>
     </nav>
 
@@ -285,4 +289,5 @@
 </body>
 
 </html>
+
 
