--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
  
 			<div class="category">5. Вступ до цифрової обробки інформації</div>
  	 <button class="menu-btn" onclick="openSim('DCT.html', 'DCT', this)">Дискретне косинусне перетворення</button>
+		 	 <button class="menu-btn" onclick="openSim('convolution.html', 'згортка', this)">Дискретна згортка</button>
  
 		
         <div style="height: 50px;"></div>
@@ -289,5 +290,6 @@
 </body>
 
 </html>
+
 
 
