--- a/index.html
+++ b/index.html
@@ -229,8 +229,10 @@
         <button class="menu-btn" onclick="openSim('HashingARX.html', 'Хешування ARX', this)">Хешування (ARX конструкції)</button>
  
 			<div class="category">5. Вступ до цифрової обробки інформації</div>
- 	 <button class="menu-btn" onclick="openSim('DCT.html', 'DCT', this)">Дискретне косинусне перетворення</button>
+ 			 <button class="menu-btn" onclick="openSim('DCT.html', 'DCT', this)">Дискретне косинусне перетворення</button>
+		 <button class="menu-btn" onclick="openSim('lossy.html', 'Стиснення з втратами', this)">'Стиснення з втратами (lossy compression)</button>
 		 	 <button class="menu-btn" onclick="openSim('convolution.html', 'згортка', this)">Дискретна згортка</button>
+		  	 <button class="menu-btn" onclick="openSim('DiscrQuant.html', 'Дискретизація і квантування', this)">Дискретизація і квантування</button>
  
 		
         <div style="height: 50px;"></div>
@@ -290,6 +292,7 @@
 </body>
 
 </html>
+
 
 
 
