--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
  
 			<div class="category">5. Вступ до цифрової обробки інформації</div>
  			 <button class="menu-btn" onclick="openSim('DCT.html', 'DCT', this)">Дискретне косинусне перетворення</button>
-		 <button class="menu-btn" onclick="openSim('lossy.html', 'Стиснення з втратами', this)">'Стиснення з втратами (lossy compression)</button>
+		 <button class="menu-btn" onclick="openSim('Lossy.html', 'Стиснення з втратами', this)">Стиснення з втратами (lossy compression)</button>
 		 	 <button class="menu-btn" onclick="openSim('convolution.html', 'згортка', this)">Дискретна згортка</button>
-		  	 <button class="menu-btn" onclick="openSim('DiscrQuant.html', 'Дискретизація і квантування', this)">Дискретизація і квантування</button>
+		  	 <button class="menu-btn" onclick="openSim('DiscretQuant.html', 'Дискретизація і квантування', this)">Дискретизація і квантування</button>
  
 		
         <div style="height: 50px;"></div>
@@ -292,6 +292,7 @@
 </body>
 
 </html>
+
 
 
 
