--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             padding: 15px 20px 5px 20px;
             font-size: 0.75rem;
             text-transform: uppercase;
-            color: #7f8c8d;
+            color: #ffffff;
             font-weight: bold;
             letter-spacing: 1px;
             background: #22303d;
@@ -294,6 +294,7 @@
 </body>
 
 </html>
+
 
 
 
