--- a/index.html
+++ b/index.html
@@ -174,11 +174,10 @@
 
         <div class="category">1. Комбінаторика, теорія множин і математична логіка</div>
         
-        <button class="menu-btn" onclick="openSim('SetOperations.html', 'Операції над множинами', this)">Операції над множинами (кола Ейлера)</button>
+        <button class="menu-btn" onclick="openSim('SetOperations.html', 'Операції над множинами', this)">Операції над множинами</button>
         <button class="menu-btn" onclick="openSim('Cardinality_and_power-set.html', 'Потужність множин і булеан', this)">Потужність множин і булеан</button>
         <button class="menu-btn" onclick="openSim('Binary_relations.html', 'Бінарні відношення', this)">Відношення</button>
-        <button class="menu-btn" onclick="openSim('Combinatorics.html', 'Комбінаторика (частина 1)', this)">Основні формули комбінаторики</button>
-        <button class="menu-btn" onclick="openSim('Combinatorics2.html', 'Комбінаторика (частина 2)', this)">Комбінаторика-2</button>
+      <button class="menu-btn" onclick="openSim('Combinatorics2.html', 'Комбінаторика', this)">Комбінаторика</button>
 
                 
         <button class="menu-btn" onclick="openSim('MathLogic.html', 'Основи мат. логіки', this)">Основні логічні операції</button>
@@ -293,6 +292,7 @@
 </body>
 
 </html>
+
 
 
 
