--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
         <button class="menu-btn" onclick="openSim('SetOperations.html', 'Операції над множинами', this)">Операції над множинами</button>
         <button class="menu-btn" onclick="openSim('Cardinality_and_power-set.html', 'Потужність множин і булеан', this)">Потужність множин і булеан</button>
         <button class="menu-btn" onclick="openSim('Binary_relations.html', 'Бінарні відношення', this)">Відношення</button>
-      <button class="menu-btn" onclick="openSim('Combinatorics2.html', 'Комбінаторика', this)">Комбінаторика</button>
-
+       <button class="menu-btn" onclick="openSim('Combinatorics2.html', 'Комбінаторика', this)">Комбінаторика</button>
+       <button class="menu-btn" onclick="openSim('O_n_.html', 'Обчислювальна складність', this)">Обчислювальна складність ("O-велике")</button>
                 
         <button class="menu-btn" onclick="openSim('MathLogic.html', 'Основи мат. логіки', this)">Основні логічні операції</button>
         <button class="menu-btn" onclick="openSim('karno.html', 'Карти Карно', this)">Карти Карно</button>
@@ -292,6 +292,7 @@
 </body>
 
 </html>
+
 
 
 
