--- a/index.html
+++ b/index.html
@@ -181,7 +181,10 @@
        <button class="menu-btn" onclick="openSim('O_n_.html', 'Обчислювальна складність', this)">Обчислювальна складність ("O-велике")</button>
                 
         <button class="menu-btn" onclick="openSim('MathLogic.html', 'Основи мат. логіки', this)">Основні логічні операції</button>
-        <button class="menu-btn" onclick="openSim('karno.html', 'Карти Карно', this)">Карти Карно</button>
+
+
+		 <button class="menu-btn" onclick="openSim('logic3.html', 'Закони мат.логіки і Карти Карно', this)">Закони математичної логіки. Мінімізація логічних функцій</button>
+        <button class="menu-btn" onclick="openSim('karno.html', 'Карти Карно на торі', this)">Топологія Карт Карно</button>
 
         <div class="category">2. Теорія графів</div>
         
@@ -292,6 +295,7 @@
 </body>
 
 </html>
+
 
 
 
