--- a/DCT.html
+++ b/DCT.html
@@ -396,7 +396,7 @@
             let val = 0;
             if(type === 'zero') val = (i === Math.floor(N/3)) ? 150 : 0;
             else if(type === 'cosine1') val = Math.cos((Math.PI/N)*(i+0.5)*3) * 100;
-            else if(type === 'cosineMix') val = (Math.cos((Math.PI/N)*(i+0.5)*5) * 80)*0.3 +(Math.cos((Math.PI/N)*(i+0.5)*2) * 80)*0.4 + (Math.cos((Math.PI/N)*(i+0.5)*6) * 40)*0.4 +(Math.cos((Math.PI/N)*(i+0.5)*8) * 40)*0.2 +(Math.cos((Math.PI/N)*(i+0.5)*12) * 40)*0.2;
+            else if(type === 'cosineMix') val = (Math.cos((Math.PI/N)*(i+0.5)*1) * 40)*0.6 + (Math.cos((Math.PI/N)*(i+0.5)*3) * 40)*0.2 +(Math.cos((Math.PI/N)*(i+0.5)*4) * 40)*0.3 +(Math.cos((Math.PI/N)*(i+0.5)*5) * 40)*0.5 ;
             else if(type === 'square') val = (i < N/2) ? 80 : -80;
             else if(type === 'saw') val = (i<(N/2)) ? -80 + (160 * i/N):-160 + (160 * i/N);
             else if(type === 'random') val = (Math.random()-0.5)*200;
