--- a/DCT.html
+++ b/DCT.html
@@ -299,7 +299,7 @@
         
         <div class="panel">
             <div style="display:flex; justify-content:space-between; align-items:center;">
-                <h3>1. Форма хвилі (Timbre)</h3>
+                <h3>1. Дискретизована хвиля</h3>
                 <button onclick="animateSynthesis()" id="animBtn" style="font-size:0.8rem; padding:4px 10px;">▶ Анімація (IDCT)</button>
             </div>
             <div class="legend">
@@ -311,7 +311,7 @@
         </div>
 
         <div class="panel">
-            <h3>2. Гармоніки (Equalizer)</h3>
+            <h3>2. Спектр (Амплітуди косинусів - гармоніки)</h3>
             <div class="legend">
                 <span><span class="dot" style="background:var(--accent)"></span>Гучність частоти X[k]</span>
             </div>
