--- a/Lossy.html
+++ b/Lossy.html
@@ -193,7 +193,7 @@
                     <span class="stat-val" id="valTotal">0</span>
                 </div>
                 <div class="stat-box">
-                    <div style="color:var(--kept); font-size:0.8rem">Збережено (Non-Zero)</div>
+                    <div style="color:var(--kept); font-size:0.8rem">Збережено (в середньому)</div>
                     <span class="stat-val" id="valKept">0</span>
                 </div>
                 <div class="stat-box">
