--- a/index.html
+++ b/index.html
@@ -256,7 +256,8 @@
 			<div class="category">4. Вступ до цифрової обробки інформації</div>
  			 <button class="menu-btn" onclick="openSim('DCT.html', 'DCT', this)">Дискретне косинусне перетворення</button>
 			 <button class="menu-btn" onclick="openSim('DiscretQuant.html', 'Дискретизація і квантування', this)">Дискретизація і квантування</button>
-		 	 <button class="menu-btn" onclick="openSim('Lossy.html', 'Стиснення з втратами', this)">Стиснення з втратами (lossy compression) на прикладі звуку</button>
+		 	 <button class="menu-btn" onclick="openSim('Lossy.html', 'Стиснення з втратами: Звук', this)">Стиснення з втратами (lossy compression) на прикладі звуку</button>
+			 <button class="menu-btn" onclick="openSim('Lossy2D.html', 'Стиснення з втратами: Зображення', this)">Стиснення з втратами (lossy compression) на прикладі зображення</button>
 		 	 <button class="menu-btn" onclick="openSim('convolution.html', 'згортка', this)">Дискретна згортка</button>
 			 <button class="menu-btn" onclick="openSim('2D-ConvolFilter.html', '2D згортковий фільтр', this)">Згортковий фільтр зображень</button>
 	
@@ -319,6 +320,7 @@
 </body>
 
 </html>
+
 
 
 
