--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 <div class="wrapper">
     <nav id="sidebar">
         <div class="sidebar-header">
-            <h3>ДИСКРЕТНА МАТЕМАТИКА. Інтерактивний посібник</h3>
+            <h3>ДИСКРЕТНА МАТЕМАТИКА. Інтерактивний навчальний посібник</h3>
         </div>
 
         <div class="category">1. Комбінаторика, теорія множин і математична логіка</div>
@@ -320,6 +320,7 @@
 </body>
 
 </html>
+
 
 
 
