--- a/Huffman_and_Shannon-Fano.html
+++ b/Huffman_and_Shannon-Fano.html
@@ -193,7 +193,7 @@
             <option value="баранка впала на барабан">баранка впала на барабан</option>
            
         </select>
-        <textarea id="inputText" rows="3">баранка впала на барабан</textarea>
+        <textarea id="inputText" rows="3">SANTA AT NASA</textarea>
         <button onclick="runSimulation()">Побудувати Симуляцію</button>
         
         <div id="stepControls" style="display: none;">
