--- a/Huffman_and_Shannon-Fano.html
+++ b/Huffman_and_Shannon-Fano.html
@@ -191,6 +191,7 @@
             <option value="молоко воно дороге">молоко воно дороге</option>
             <option value="пилив пилип липу та пиво не пив">пилив пилип липу та пиво не пив</option>
             <option value="баранка впала на барабан">баранка впала на барабан</option>
+  <option value="anna saw a banana in karaganda"> anna saw a banana in karaganda</option>
            
         </select>
         <textarea id="inputText" rows="3">SANTA AT NASA</textarea>
