--- a/Huffman_and_Shannon-Fano.html
+++ b/Huffman_and_Shannon-Fano.html
@@ -192,7 +192,7 @@
             <option value="пилив пилип липу та пиво не пив">пилив пилип липу та пиво не пив</option>
             <option value="баранка впала на барабан">баранка впала на барабан</option>
   <option value="anna saw a banana in karaganda"> anna saw a banana in karaganda</option>
-           
+ <option value="атака атамана застала зненацька"> атака атамана застала зненацька</option>
         </select>
         <textarea id="inputText" rows="3">SANTA AT NASA</textarea>
         <button onclick="runSimulation()">Побудувати Симуляцію</button>
