--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
         <button class="menu-btn" onclick="openSim('ArithmCode.html', 'Арифметичне кодування', this)">Арифметичне кодування</button>
         <button class="menu-btn" onclick="openSim('LZ77-78.html', 'Алгоритми LZ77 / LZ78', this)">Стиснення даних (LZ77 / LZ78)</button>
         <button class="menu-btn" onclick="openSim('rANS.html', 'rANS кодування', this)">rANS кодування</button>
+		 <button class="menu-btn" onclick="openSim('hemming.html', 'Блокові коди', this)">Код Hemming (7,4)</button>
         <button class="menu-btn" onclick="openSim('convolution-codes.html', 'Згорткові коди', this)">Згорткові коди</button>
 
         <div class="subcategory">Криптографія та кібербезпека</div>
@@ -320,6 +321,7 @@
 </body>
 
 </html>
+
 
 
 
