--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
         <button class="menu-btn" onclick="openSim('convolution-codes.html', 'Згорткові коди', this)">Згорткові коди</button>
 
         <div class="subcategory">Криптографія та кібербезпека</div>
+		 <button class="menu-btn" onclick="openSim('lagrange.html', 'Інтерполяційний полінм Лагранжа', this)">Інтерполяція: Криптографія і коди із самокорекцією</button>
         <button class="menu-btn" onclick="openSim('RSA.html', 'Шифрування RSA', this)">Алгоритм RSA</button>
         <button class="menu-btn" onclick="openSim('DH.html', 'Протокол Діффі-Хеллмана', this)">Обмін ключами (Діффі-Хеллман)</button>
           <button class="menu-btn" onclick="openSim('aes.html', ',Блочне симетричне шифрування AES', this)">Симетричне шифрування AES</button>
@@ -321,6 +322,7 @@
 </body>
 
 </html>
+
 
 
 
