--- a/Lossy.html
+++ b/Lossy.html
@@ -162,7 +162,7 @@
     <div style="max-width: 1000px; width: 100%;">
    
    <details>
-            <summary>🎓 Лекційний матеріал: Дискретна математика стиснення (MDCT та Психоакустика)</summary>
+            <summary>🎓 Теоретична довідка</summary>
             <div class="theory-content">
                 <h3>1. Спектральне перетворення (DCT/MDCT)</h3>
                 <p>
@@ -195,30 +195,13 @@
 
                 <h3>3. Маскування та Функція Розтікання</h3>
                 <p>
-                    Маскування — це нелінійний ефект, при якому поріг чутності $T_q$ локально підвищується в присутності сильного сигналу (маскера).
+                    Маскування — це нелінійний ефект, при якому поріг чутності Tq локально підвищується в присутності сильного сигналу (маскера).
                     Математично це моделюється як згортка енергетичного спектру з <b>функцією розтікання (Spreading Function)</b>. 
                     <br><br>
                     <i>У симуляторі візуалізовано саме результуючий поріг маскування (пунктирна лінія). Всі спектральні компоненти під цією кривою вважаються надлишковою інформацією.</i>
                 </p>
 
-                <h3>4. Квантування та Розрідженість (Sparsity)</h3>
-                <p>
-                    Мета Lossy-компресії — максимізувати <b>розрідженість</b> (sparsity) вектору коефіцієнтів перед ентропійним кодуванням. Ми застосовуємо порогову функцію (Thresholding function) $T_\lambda$:
-                </p>
                 
-                <p><b>А) Жорсткий поріг (Hard Thresholding):</b></p>
-                <div style="background:#222; padding:10px; font-family: monospace; border-left: 2px solid var(--kept);">
-                    y = x,  якщо |x| > &lambda;<br>
-                    y = 0,  якщо |x| &le; &lambda;
-                </div>
-                <p><i>Зберігає енергію піків, але вносить розриви другого роду (спектральні артефакти).</i></p>
-
-                <p><b>Б) М'який поріг (Soft Thresholding):</b></p>
-                <div style="background:#222; padding:10px; font-family: monospace; border-left: 2px solid var(--threshold);">
-                    y = sign(x) &cdot; (|x| - &lambda;),  якщо |x| > &lambda;<br>
-                    y = 0,                      якщо |x| &le; &lambda;
-                </div>
-                <p><i>Забезпечує неперервність функції відгуку, зменшуючи дисперсію шуму квантування, але дещо занижує загальну енергію сигналу.</i></p>
             </div>
         </details>
    
