--- a/lagrange.html
+++ b/lagrange.html
@@ -456,7 +456,7 @@
 		
         <div class="info-box" style="background: rgba(255,255,255,0.7);">
             <p>Уявіть, що ви пролили каву на QR-код. Чому він все ще працює?
-            <br>Бо QR-код містить "зайві" точки, які лежать на тій самій математичній кривій, що й дані.</p>
+            <br>Бо QR-код містить "зайві" точки, які лежать на тій самій кривій, що й дані. Для відновлення квадратичної функції необхідно знати три коефіцієнта, отже достатньо координат будь-яких її трьох точок</p>
         </div>
 
         <div class="controls">
