--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 		 	 <button class="menu-btn" onclick="openSim('convolution.html', 'згортка', this)">Дискретна згортка</button>
 			 <button class="menu-btn" onclick="openSim('2D-ConvolFilter.html', '2D згортковий фільтр', this)">Згортковий фільтр зображень</button>
 	
- 
+ 				 <button class="menu-btn" onclick="openSim('HR.html', 'монітор пульсу', this)">Цифрова фільтрація і спектральний аналіз: монітор пульсу</button>
 		
         <div style="height: 50px;"></div>
     </nav>
@@ -322,6 +322,7 @@
 </body>
 
 </html>
+
 
 
 
