--- a/index.html
+++ b/index.html
@@ -262,7 +262,8 @@
 			 <button class="menu-btn" onclick="openSim('Lossy2D.html', 'Стиснення з втратами: Зображення', this)">Стиснення з втратами (lossy compression) на прикладі зображення</button>
 		 	 <button class="menu-btn" onclick="openSim('convolution.html', 'згортка', this)">Дискретна згортка</button>
 			 <button class="menu-btn" onclick="openSim('2D-ConvolFilter.html', '2D згортковий фільтр', this)">Згортковий фільтр зображень</button>
-	
+		
+		 <button class="menu-btn" onclick="openSim('CNN.html', 'cNN', this)">Вступ до згорткових нейромереж</button>
  				 <button class="menu-btn" onclick="openSim('HR.html', 'монітор пульсу', this)">Цифрова фільтрація і спектральний аналіз: монітор пульсу</button>
 		
         <div style="height: 50px;"></div>
@@ -322,6 +323,7 @@
 </body>
 
 </html>
+
 
 
 
