--- a/index.html
+++ b/index.html
@@ -260,7 +260,9 @@
 			 <button class="menu-btn" onclick="openSim('DiscretQuant.html', 'Дискретизація і квантування', this)">Дискретизація і квантування</button>
 		 	 <button class="menu-btn" onclick="openSim('Lossy.html', 'Стиснення з втратами: Звук', this)">Стиснення з втратами (lossy compression) на прикладі звуку</button>
 			 <button class="menu-btn" onclick="openSim('Lossy2D.html', 'Стиснення з втратами: Зображення', this)">Стиснення з втратами (lossy compression) на прикладі зображення</button>
-		 	 <button class="menu-btn" onclick="openSim('convolution.html', 'згортка', this)">Дискретна згортка</button>
+		 <button class="menu-btn" onclick="openSim('Vocoder.html', 'Vocoder', this)">Vocoder на основі лінійного передбачення</button>
+     	
+		<button class="menu-btn" onclick="openSim('convolution.html', 'згортка', this)">Дискретна згортка</button>
 			 <button class="menu-btn" onclick="openSim('2D-ConvolFilter.html', '2D згортковий фільтр', this)">Згортковий фільтр зображень</button>
 		      <button class="menu-btn" onclick="openSim('NLM4.html', 'LMN', this)">Нелокальне усереднення для денойзінгу зображень</button>
       
@@ -324,6 +326,7 @@
 </body>
 
 </html>
+
 
 
 
