--- a/Lossy.html
+++ b/Lossy.html
@@ -162,49 +162,106 @@
     <div style="max-width: 1000px; width: 100%;">
    
    <details>
-            <summary>🎓 Теоретична довідка</summary>
-            <div class="theory-content">
-                <h3>1. Спектральне перетворення (DCT/MDCT)</h3>
-                <p>
-                    У сучасних аудіокодеках (MP3, AAC, Vorbis) замість класичного перетворення Фур'є використовується <b>Модифіковане Дискретне Косинусне Перетворення (MDCT)</b>.
-                </p>
-                <p>
-                    <b>Математична сутність:</b> Будь-який цифровий сигнал можна представити як суму косинусоїд різних частот. Процес перетворення — це пошук <b>кореляції</b> (скалярного добутку) між фрагментом вхідного сигналу та набором <i>базисних функцій</i>.
-                </p>
-                <div style="background:#222; padding:15px; border-left:3px solid var(--accent); font-family: 'Times New Roman', serif; font-size: 1.1rem; margin: 15px 0; text-align: center;">
-                    X<sub>k</sub> = &sum;<sub>n=0</sub><sup>N-1</sup> x<sub>n</sub> &cdot; cos [&pi;/N (n + 0.5 + N/2)(k + 0.5)]
-                </div>
-                <p>
-                    Де:
-                    <ul>
-                        <li><b>x<sub>n</sub></b> — вхідний вектор (амплітуди у часі).</li>
-                        <li><b>cos[...]</b> — базисна функція. Якщо форма сигналу x<sub>n</sub> схожа на базисну косинусоїду k-ї частоти, коефіцієнт <b>X<sub>k</sub></b> буде великим.</li>
-                        <li><b>Energy Compaction:</b> Основна властивість DCT — здатність концентрувати енергію сигналу в невеликій кількості коефіцієнтів (низькочастотних), залишаючи високочастотні коефіцієнти близькими до нуля.</li>
-                    </ul>
-                </p>
+    <summary>🎓 Теоретична довідка</summary>
+    <div class="theory-content">
+        <h3>1. Спектральне перетворення (DCT/MDCT)</h3>
+        <p>
+            У сучасних аудіокодеках (MP3, AAC, Vorbis) замість класичного перетворення Фур'є використовується <b>Модифіковане Дискретне Косинусне Перетворення (MDCT)</b>.
+        </p>
+        <p>
+            <b>Математична сутність:</b> Будь-який цифровий сигнал можна представити як суму косинусоїд різних частот. Процес перетворення — це пошук <b>кореляції</b> (скалярного добутку) між фрагментом вхідного сигналу та набором <i>базисних функцій</i>.
+        </p>
+        
+        <div style="background:#222; padding:15px; border-left:3px solid var(--accent); margin: 15px 0; overflow-x: auto;">
+            <math xmlns="http://www.w3.org/1998/Math/MathML" display="block" style="font-family: 'Times New Roman', serif; font-size: 1.2rem; color: #e0e0e0;">
+                <msub>
+                    <mi>X</mi>
+                    <mi>k</mi>
+                </msub>
+                <mo>=</mo>
+                <munderover>
+                    <mo>&sum;</mo>
+                    <mrow>
+                        <mi>n</mi>
+                        <mo>=</mo>
+                        <mn>0</mn>
+                    </mrow>
+                    <mrow>
+                        <mi>N</mi>
+                        <mo>-</mo>
+                        <mn>1</mn>
+                    </mrow>
+                </munderover>
+                <msub>
+                    <mi>x</mi>
+                    <mi>n</mi>
+                </msub>
+                <mo>&sdot;</mo>
+                <mi>cos</mi>
+                <mfenced open="[" close="]">
+                    <mrow>
+                        <mfrac>
+                            <mi>&pi;</mi>
+                            <mi>N</mi>
+                        </mfrac>
+                        <mfenced>
+                            <mrow>
+                                <mi>n</mi>
+                                <mo>+</mo>
+                                <mfrac>
+                                    <mn>1</mn>
+                                    <mn>2</mn>
+                                </mfrac>
+                                <mo>+</mo>
+                                <mfrac>
+                                    <mi>N</mi>
+                                    <mn>2</mn>
+                                </mfrac>
+                            </mrow>
+                        </mfenced>
+                        <mfenced>
+                            <mrow>
+                                <mi>k</mi>
+                                <mo>+</mo>
+                                <mfrac>
+                                    <mn>1</mn>
+                                    <mn>2</mn>
+                                </mfrac>
+                            </mrow>
+                        </mfenced>
+                    </mrow>
+                </mfenced>
+            </math>
+        </div>
 
-                <h3>2. Психофізика: Закон Вебера-Фехнера</h3>
-                <p>
-                    Сприйняття гучності людиною підпорядковується <b>Закону Вебера-Фехнера</b>: інтенсивність відчуття пропорційна логарифму інтенсивності подразника.
-                    Саме тому:
-                </p>
-                <ul>
-                    <li>Спектрограми відображаються у <b>логарифмічній шкалі</b> частот (вісь X) та децибелах (вісь Y).</li>
-                    <li>Ми використовуємо поняття <b>Критичних смуг (Critical Bands)</b> або шкалу Барків, оскільки вухо інтегрує енергію звуку в смугах, ширина яких зростає з частотою.</li>
-                </ul>
+        <p>
+            Де:
+            <ul>
+                <li><b>x<sub>n</sub></b> — вхідний вектор (амплітуди у часі).</li>
+                <li><b>cos[...]</b> — базисна функція. Якщо форма сигналу x<sub>n</sub> схожа на базисну косинусоїду k-ї частоти, коефіцієнт <b>X<sub>k</sub></b> буде великим.</li>
+                <li><b>Energy Compaction:</b> Основна властивість DCT — здатність концентрувати енергію сигналу в невеликій кількості коефіцієнтів (низькочастотних), залишаючи високочастотні коефіцієнти близькими до нуля.</li>
+            </ul>
+        </p>
 
-                <h3>3. Маскування та Функція Розтікання</h3>
-                <p>
-                    Маскування — це нелінійний ефект, при якому поріг чутності Tq локально підвищується в присутності сильного сигналу (маскера).
-                    Математично це моделюється як згортка енергетичного спектру з <b>функцією розтікання (Spreading Function)</b>. 
-                    <br><br>
-                    <i>У симуляторі візуалізовано саме результуючий поріг маскування (пунктирна лінія). Всі спектральні компоненти під цією кривою вважаються надлишковою інформацією.</i>
-                </p>
+        <h3>2. Психофізика: Закон Вебера-Фехнера</h3>
+        <p>
+            Сприйняття гучності людиною підпорядковується <b>Закону Вебера-Фехнера</b>: інтенсивність відчуття пропорційна логарифму інтенсивності подразника.
+            Саме тому:
+        </p>
+        <ul>
+            <li>Спектрограми відображаються у <b>логарифмічній шкалі</b> частот (вісь X) та децибелах (вісь Y).</li>
+            <li>Ми використовуємо поняття <b>Критичних смуг (Critical Bands)</b> або шкалу Барків, оскільки вухо інтегрує енергію звуку в смугах, ширина яких зростає з частотою.</li>
+        </ul>
 
-                
-            </div>
-        </details>
-   
+        <h3>3. Маскування та Функція Розтікання</h3>
+        <p>
+            Маскування — це нелінійний ефект, при якому поріг чутності Tq локально підвищується в присутності сильного сигналу (маскера).
+            Математично це моделюється як згортка енергетичного спектру з <b>функцією розтікання (Spreading Function)</b>. 
+            <br><br>
+            <i>У симуляторі візуалізовано саме результуючий поріг маскування (пунктирна лінія). Всі спектральні компоненти під цією кривою вважаються надлишковою інформацією.</i>
+        </p>
+    </div>
+</details>
    
     </div>
 
