--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
 			<div class="category">4. Вступ до цифрової обробки інформації</div>
  			 <button class="menu-btn" onclick="openSim('DCT.html', 'DCT', this)">Дискретне косинусне перетворення</button>
 		 <button class="menu-btn" onclick="openSim('fft.html', 'DFT', this)">Дискретне перетворення Фур'є</button>
+				 <button class="menu-btn" onclick="openSim('DCT-DFT.html', 'DCT vs DFT', this)">Порівняння ДКП і ДПФ</button>
 			 <button class="menu-btn" onclick="openSim('DiscretQuant.html', 'Дискретизація і квантування', this)">Дискретизація і квантування</button>
 		 	 <button class="menu-btn" onclick="openSim('Lossy.html', 'Стиснення з втратами: Звук', this)">Стиснення з втратами (lossy compression) на прикладі звуку</button>
 			 <button class="menu-btn" onclick="openSim('Lossy2D.html', 'Стиснення з втратами: Зображення', this)">Стиснення з втратами (lossy compression) на прикладі зображення</button>
@@ -327,6 +328,7 @@
 </body>
 
 </html>
+
 
 
 
